# psoc4-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-APACHE-CYPRESS  LICENSE-APACHE-EMBASSY  NOTICE.md  README.md  rust-toolchain.toml
psoc4100s-examples/: Cargo.toml  memory.x  openocd.cfg
psoc4100s-examples/.cargo/: config.toml
psoc4100s-hal/: Cargo.toml  README.md
psoc4100s-hal/src/: clocks.rs  gpio.rs  i2c.rs  lib.rs  uart.rs  watchdog.rs  wdc.rs
psoc4100s-pac/: Cargo.toml  README.md  device.x  update.sh
psoc4100s-pac/src/: cpuss.rs  csd0.rs  gpio.rs  lib.rs  lpcomp.rs  peri.rs  prgio.rs  sar0.rs  scb.rs  scb0.rs  sflash.rs  spcif.rs  tcpwm.rs
psoc4100s-pac/src/cpuss/: regs.rs
psoc4100s-pac/src/csd0/: regs.rs  vals.rs
psoc4100s-pac/src/gpio/: regs.rs
psoc4100s-pac/src/hsiom/: regs.rs  vals.rs
psoc4100s-pac/src/lcd/: vals.rs
psoc4100s-pac/src/lpcomp/: vals.rs
psoc4100s-pac/src/pass0/: regs.rs
psoc4100s-pac/src/prgio/: regs.rs
psoc4100s-pac/src/sar0/: regs.rs  vals.rs
psoc4100s-pac/src/scb/: regs.rs
psoc4100s-pac/src/sflash/: regs.rs
psoc4100s-pac/src/spcif/: regs.rs
psoc4100s-pac/src/srsslt/: regs.rs
psoc4100s-pac/src/tcpwm/: regs.rs  vals.rs
psoc4100s-pac/src/wco/: regs.rs  vals.rs
psoc4100s-pac/svd/: psoc4100s.svd  psoc4100s.yaml
src/: _vectors.rs  ctbm0.rs  hsiom.rs  lcd.rs  lib.rs  pass0.rs  peri.rs  srsslt.rs  wco.rs
src/ctbm0/: regs.rs  vals.rs
src/gpio/: regs.rs  vals.rs
src/lcd/: regs.rs
src/lpcomp/: regs.rs
src/peri/: regs.rs
src/scb0/: vals.rs
src/srsslt/: regs.rs  vals.rs
src/wco/: regs.rs  vals.rs
svd/: psoc4100s.svd  psoc4100s.yaml
