[package]
name = "psoc4100s-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
psoc4100s-hal = { version = "0.1.0", path = "../psoc4100s-hal", features = ["defmt", "unstable-traits", "nightly", "time-driver-wdc-ilo"] }

embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", rev = "f956d19", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy.git", rev = "f956d19", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.6", features =["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
