[package]
name = "psoc4100s-examples"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "i2c_async"
required-features = ["nightly", "unstable-traits"]

[[bin]]
name = "i2c_blocking"
required-features = ["nightly"]

[[bin]]
name = "uart_async"
required-features = ["nightly"]

[features]
# Enable nightly-only features
nightly = [
    "embedded-hal-1",
    "embedded-hal-async",
    "embedded-io-async",
]

# Implement embedded-hal 1.0 alpha traits.
# Implement embedded-hal-async traits if `nightly` is set as well.
unstable-traits = ["embedded-hal-1"]

[dependencies]
psoc4100s-hal = { version = "0.1.0", path = "../psoc4100s-hal", features = ["defmt", "unstable-traits", "nightly", "time-driver-wdc-ilo"] }

embassy-executor = { version = "0.3.0", git = "https://github.com/embassy-rs/embassy.git", rev = "f956d19", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.5", git = "https://github.com/embassy-rs/embassy.git", rev = "f956d19", features = ["nightly", "unstable-traits", "defmt", "defmt-timestamp-uptime"] }

cortex-m = { version = "0.7.6", features =["critical-section-single-core", "inline-asm"] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.1", optional = true }
embedded-hal-async = { version = "=1.0.0-rc.1", optional = true }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.0", optional = true }
